# bees-and-bears

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  gunicorn_config.py  pyproject.toml
apps/authentication/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/authentication/management/commands/: create_default_superuser.py
apps/authentication/migrations/: 0001_initial.py
apps/customers/: admin.py  models.py  serializers.py  urls.py  views.py
apps/customers/migrations/: 0001_initial.py
apps/loans/: admin.py  models.py  serializers.py  urls.py  views.py
apps/loans/migrations/: 0001_initial.py
config/: settings.py  settings_test.py  urls.py
tests/: conftest.py  factories.py  test_authentication.py  test_customers.py  test_loan_offers.py  test_rbac.py
